# Proyecto-Final

./: CMakeLists.txt  CMakeLists.txt.user.c38157f  Imagenes.qrc  Informe Juego.docx  Jugador.cpp  Jugador.h  TeslaGame.rar  TeslaGame_V0.0.2.rar  activador.cpp  activador.h  enemigo.cpp  enemigo.h  game.cpp  game.h  jugador.cpp  jugador.h  main.cpp  muro.cpp  muro.h  obstaculo.cpp  obstaculo.h  proyectil.cpp  proyectil.h  puerta.cpp  puerta.h  puntaje.cpp  puntaje.h  vida.cpp  vida.h
